kernel/team: Set team arguments during load_image/exec_team.

This way, by the time we send a notification, the arguments
are already set even if the main thread has not yet started.

Fixes #12703.

Change-Id: Ib93b4b16bffa8cb943cf6389f0f72dce89f9749b
Reviewed-on: https://review.haiku-os.org/c/haiku/+/7702
Tested-by: Commit checker robot <no-reply+buildbot@haiku-os.org>
Reviewed-by: waddlesplash <waddlesplash@gmail.com>